crates/toml/tests/snapshots/invalid/table/no-close-09.stderr
TOML parse error at line 1, column 21
  |
1 | ["where will it end""]
  |                     ^
invalid table header
expected `.`, `]`
